#360: Add SignupApiV1Controller.java
